--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-.vscode
+.sass-cache
+.vscode/
+.DS_Store
+.idea/
+
+.DS_Store
+node_modules/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
